--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -2,6 +2,9 @@ app:
   name: k8sdiy
   version: v4
   port: 80
+spec:
+  syncPolicy:
+    automated: {}  
 image:
   name: denvasyliev/k8sdiy
   tag: build-599e1af
